[gd_scene load_steps=16 format=3 uid="uid://okbuee2b0cwb"]

[ext_resource type="Script" path="res://scenes/ui/settings/settings.gd" id="1_4a38x"]
[ext_resource type="Texture2D" uid="uid://ba77ttaupd1ln" path="res://assets/section-sky-1.png" id="2_jn083"]
[ext_resource type="PackedScene" uid="uid://by65ps6pypqvf" path="res://scenes/game/cloud/cloud.tscn" id="3_riglm"]
[ext_resource type="PackedScene" uid="uid://dk6f72amqtpfo" path="res://scenes/ui/cupcakes/solid_blue_dollop_happy.tscn" id="9_pub1p"]
[ext_resource type="PackedScene" uid="uid://bcu3euevue277" path="res://scenes/ui/cupcakes/solid_green_dollop_happy.tscn" id="10_u43tt"]
[ext_resource type="PackedScene" uid="uid://dgt2esjv0tka1" path="res://scenes/ui/cupcakes/solid_lime_dollop_happy.tscn" id="11_1gdrl"]
[ext_resource type="PackedScene" uid="uid://bgptinrbvsdmj" path="res://scenes/ui/cupcakes/solid_orange_dollop_happy.tscn" id="12_88800"]
[ext_resource type="PackedScene" uid="uid://26vnsxaodoge" path="res://scenes/ui/cupcakes/solid_pink_dollop_happy.tscn" id="13_5to5m"]
[ext_resource type="PackedScene" uid="uid://d0f3dp66tf40v" path="res://scenes/ui/cupcakes/solid_salmon_dollop_happy.tscn" id="14_l0vb4"]
[ext_resource type="Texture2D" uid="uid://cejp3cf4su8fu" path="res://assets/window2-blue.png" id="15_t10px"]
[ext_resource type="FontFile" uid="uid://b8n40e88ns21u" path="res://assets/Fredoka/static/Fredoka-Bold.ttf" id="16_maao0"]
[ext_resource type="Texture2D" uid="uid://c35e2pymeqacj" path="res://assets/g1586.png" id="18_5a75y"]
[ext_resource type="Texture2D" uid="uid://dihj4fnwadl6u" path="res://assets/g18213.png" id="19_vqv24"]
[ext_resource type="Texture2D" uid="uid://bfd5lnqqbk1d7" path="res://assets/g15535.png" id="19_xv57u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dso0"]
bg_color = Color(0.733333, 0.396078, 0.996078, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.470588, 0.792157, 0.258824, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 12
expand_margin_left = 30.0
expand_margin_top = 30.0
expand_margin_right = 30.0
expand_margin_bottom = 30.0

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4a38x")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -319.0
offset_top = -731.0
offset_right = 466.0
offset_bottom = 669.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jn083")

[node name="Cloud" parent="TextureRect3" instance=ExtResource("3_riglm")]
position = Vector2(2032, 1404)

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -579.0
offset_top = -334.5
offset_right = 579.0
offset_bottom = -127.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.501961, 0.807843, 0.921569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.431373)
theme_override_colors/font_outline_color = Color(0.12549, 0.356863, 0.541176, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 160
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Window2-blue" type="Sprite2D" parent="."]
position = Vector2(575.5, 362)
scale = Vector2(0.21308, 0.185654)
texture = ExtResource("15_t10px")

[node name="Label" type="Label" parent="Window2-blue"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -901.0
offset_top = -1275.27
offset_right = -521.0
offset_bottom = -1116.27
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.792157, 0.529412, 0.996078, 1)
theme_override_colors/font_outline_color = Color(0.733333, 0.396078, 0.996078, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("16_maao0")
theme_override_font_sizes/font_size = 128
text = "Music:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGM" type="HSlider" parent="Window2-blue"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1247.5
offset_top = -1065.95
offset_right = -174.5
offset_bottom = -786.954
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("18_5a75y")
theme_override_icons/grabber_highlight = ExtResource("18_5a75y")
theme_override_icons/grabber_disabled = ExtResource("18_5a75y")
theme_override_styles/slider = SubResource("StyleBoxFlat_5dso0")
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="Window2-blue"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -901.0
offset_top = -677.386
offset_right = -521.0
offset_bottom = -518.386
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.792157, 0.529412, 0.996078, 1)
theme_override_colors/font_outline_color = Color(0.733333, 0.396078, 0.996078, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("16_maao0")
theme_override_font_sizes/font_size = 128
text = "Effects:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="HSlider" parent="Window2-blue"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1247.5
offset_top = -468.068
offset_right = -174.5
offset_bottom = -189.068
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("18_5a75y")
theme_override_icons/grabber_highlight = ExtResource("18_5a75y")
theme_override_icons/grabber_disabled = ExtResource("18_5a75y")
theme_override_styles/slider = SubResource("StyleBoxFlat_5dso0")
max_value = 1.0
step = 0.05
value = 1.0

[node name="Back" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 195.5
offset_right = 93.0
offset_bottom = 266.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("19_xv57u")
texture_pressed = ExtResource("19_vqv24")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -41.5
offset_right = 85.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.501961, 0.807843, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0.12549, 0.356863, 0.541176, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 48
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SolidOrangeDollopHappy" parent="." instance=ExtResource("12_88800")]
layout_mode = 0
offset_left = 801.0
offset_top = 207.0
offset_right = 1001.0
offset_bottom = 407.0

[node name="SolidPinkDollopHappy" parent="." instance=ExtResource("13_5to5m")]
layout_mode = 0
offset_left = 901.0
offset_top = 299.0
offset_right = 1101.0
offset_bottom = 499.0
rotation = 0.183333

[node name="SolidSalmonDollopHappy" parent="." instance=ExtResource("14_l0vb4")]
layout_mode = 0
offset_left = 700.0
offset_top = 380.0
offset_right = 900.0
offset_bottom = 580.0
rotation = -0.33075

[node name="SolidBlueDollopHappy" parent="." instance=ExtResource("9_pub1p")]
layout_mode = 0
offset_left = 162.0
offset_top = 207.0
offset_right = 362.0
offset_bottom = 407.0

[node name="SolidGreenDollopHappy" parent="." instance=ExtResource("10_u43tt")]
layout_mode = 0
offset_left = 238.0
offset_top = 334.0
offset_right = 438.0
offset_bottom = 534.0
rotation = 0.129008

[node name="SolidLimeDollopHappy" parent="." instance=ExtResource("11_1gdrl")]
layout_mode = 0
offset_left = 52.0
offset_top = 362.0
offset_right = 252.0
offset_bottom = 562.0
rotation = -0.237359

[connection signal="timeout" from="CloudTimer" to="." method="_on_cloud_timer_timeout"]
[connection signal="drag_ended" from="Window2-blue/BGM" to="." method="_on_bgm_drag_ended"]
[connection signal="drag_ended" from="Window2-blue/SFX" to="." method="_on_sfx_drag_ended"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
